# Faceplate

./: .claudeignore  .env.embed  .env.production  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  test-template.html  vite.config.ts
.claude/: HANDOFF.md  HANDOFF_BACKUP_2026-01-30_16-20.md  settings.json
.claude/commands/: generate-ui.md  generate-vst.md  github.md  handoff.md  resume.md
.planning/: .continue-here.md  BACKLOG.md  INTEGRATION.md  ISSUES-v1.1.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STATE.md.backup  STATE.md.update  v0.10.0-MILESTONE-AUDIT.md  v1-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/: container-snap-to-grid.md  dropdown-textarea-uneditable.md  element-drop-position.md  elements-not-draggable.md  folder-export-unnecessary-subfolder.md  missing-palette-previews.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-INTEGRATION-CHECK.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-MILESTONE-AUDIT.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-element-library/: 02-01-PLAN.md  02-01-SUMMARY.md  (+9 more)
.planning/research/: ARCHITECTURE-SVG-STYLING.md  ARCHITECTURE.md  FEATURES-LAYERS-HELP.md  FEATURES-SVG-STYLING.md  FEATURES.md  LAYERS-HELP-PITFALLS.md  LAYERS_HELP_ARCHITECTURE.md  PITFALLS-SVG-STYLING.md  PITFALLS.md  POLAR_INTEGRATION.md  STACK-SVG-STYLING.md  STACK.md  SUMMARY.md  SVG-IMPORT-PITFALLS.md
UI_SPECS_PLUGINS/: EXAMPLE_ALL_ELEMENTS.json  HOLO_FACEPLATE_SPEC_v2.md  HOLO_generated.json  NOISE_VST_SPECS.md  Noise_withDevMode.json  nuNoiseEFX_user.json
assets/: blank-DpAxiOve.js  elements-containers-A9REFZLZ.js  elements-containers-CTB1DLa_.js  elements-controls-CEF3ps2B.js  elements-controls-O65A-mC0.js  elements-decorative-4FhBPFnX.js  elements-decorative-CsIiFgBx.js  elements-displays-C1BxzkO0.js  elements-displays-D1fLVOT1.js  index-7hVazfSZ.css  index-D3xKT0xS.js  index-DTDK9A33.css  index-z9e82ss4.js  vendor-dnd-CM3d3Uyb.js  vendor-zustand-BXhos0xP.js
docs/: BEST_PRACTICES.md  CLAUDE_CHROME_TESTING.md  ELEMENT_REFERENCE.md  EXPORT_FORMAT.md  FACEPLATE_DOCUMENTATION.md  FACEPLATE_SYNC_GUIDE.md  GENERATE_UI_SKILL.md  INTEGRATION_GUIDE.md  JUCE_INTEGRATION.md  JUCE_PATTERN.md  PREVIEW_VST3_SYNC_GUIDE.md  SAMPLE_TEST_FAILURE_ISSUE.md  SPECIFICATION.md  STYLE_CREATION_MANUAL.md  WORKFLOW.md
docs/manual/: README.md  assets.md  canvas.md  export.md  fonts.md  getting-started.md  layers.md  palette.md  project-management.md  properties.md  styles.md  windows.md
public/: README.txt  start-mac.command  start-windows.bat
src/: App.tsx  buildInfo.ts  index.css
src/components/: SafeSVG.tsx
src/hooks/: useBeforeUnload.ts  useCanvasSetup.ts  useDirtyState.ts  useFonts.ts  useHelpShortcut.ts  useHistoryPanel.ts  useLicense.ts  usePreviewShortcut.ts
src/lib/: embedMode.ts  keyboard.ts  svg-sanitizer.test.ts  svg-sanitizer.ts  svg-validator.test.ts  svg-validator.ts
src/schemas/: project.ts
src/services/: directoryStorage.ts  elementFactory.ts  elementLayers.ts  fileSystem.ts  helpService.ts  knobLayers.test.ts  knobLayers.ts  licenseService.ts  proElements.ts  serialization.ts  svgLayerDetection.ts  templateLoader.ts
src/store/: assetsSlice.ts  canvasSlice.ts  containerEditorSlice.ts  dirtyStateSlice.ts  elementStylesSlice.ts  elementsSlice.ts  fontsSlice.ts  index.ts  knobStylesSlice.ts  layersSlice.ts  licenseSlice.ts  templateStore.ts  viewportSlice.ts  windowsSlice.ts
src/types/: asset.ts  coordinates.ts  elementStyle.ts  elements.ts  elements.ts.bak  knobStyle.ts  layer.ts  svg.ts  template.ts
src/utils/: audioMath.ts  builtInIcons.ts  coordinates.ts  curveRendering.ts  intersection.ts  ledColorPalettes.ts  meterUtils.ts  mockAudioData.ts  svgImport.ts  valueFormatters.ts
templates/: README.md  effect-starter.json  instrument-starter.json  test-template.json
templates/vst-base/: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  plugin.config  rebuild.bat
templates/vst-base/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
templates/vst-base/ui/: bindings.js  components.js  index.html  style.css
(+964 files in other folders)
